--- a/www/index.html
+++ b/www/index.html
@@ -30,14 +30,66 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <script src="https://rawgit.com/arielfaur/ionic-pullup/master/dist/ion-pullup.js"></script>
+      <script src="https://rawgit.com/arielfaur/ionic-pullup/master/dist/ion-pullup.js"></script>
+</head>
+
     <!-- your app's js -->
+    <script src="js/animation.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="services/loginService.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="starter" ng-controller="Ctrl">
     <ion-nav-view></ion-nav-view>
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAEC5vK3H4PSYreG04qB7ahkJNeSQcFZ6w&sensor=true"></script>
+
+    <ion-pull-up-footer  class="bar-energized menu_bottom" on-expand="footerExpand()" on-collapse="footerCollapse()">
+        <ion-pull-up-handle width="100" height="25" icon-expand="ion-chevron-up" icon-collapse="ion-chevron-down" style="border-radius: 25px 25px 0 0">
+        </ion-pull-up-handle>
+        <ion-pull-up-bar>
+            <h1 class="title" ion-pull-up-trigger>Génerateur d'itinéraire</h1>
+        </ion-pull-up-bar>
+
+        <ion-pull-up-content scroll="false">
+
+          <div class="list">
+
+            <div class="item">
+              <center>
+                <p>Temps</p>
+                <input type="range" name="temp">
+                <p>X heures</p>
+              </center>
+            </div>
+            <div class="item  range-positive">
+              <center>
+                <p>Distance</p>
+                <input type="range" name="distance" min="0" max="100" value="33">
+                <p> X metres</p>
+              </center>
+            </div>
+
+          </div>
+
+               
+                <div class="item item-body">
+                 <center>
+                    <a href="">
+                     <i class="icon ion-plus"></i>
+                     <p>Ajouter des filtres</p>
+                    </a>
+                    <br>
+                    <br>
+                    <button class="button button-stable">Génerer</button>
+                  </center>
+                </div>
+      
+        </ion-pull-up-content>
+    </ion-pull-up-footer>
+
+  
   </body>
+
 </html>
